# neural-network

./: .gitignore  CMakeLists.txt  README.md
include/: logger.hpp  matrix.hpp  neural.hpp
include/neural/: neural.hpp
src/: main.cpp  matrix.cpp
src/Initializers/: he_normal.cpp  initializer.cpp  xavier_normal.cpp
src/layers/activations/: activation.cpp  relu.cpp
src/layers/dense/: dense.cpp
src/math/: matrix.cpp
tests/: test_init_he_normal.cpp  test_init_xavier_normal.cpp  test_matrix_add.cpp  test_matrix_dot.cpp  test_matrix_mul.cpp  test_matrix_sub.cpp  test_matrix_tp.cpp
tests/helper/: init_util.hpp  matrix_util.hpp
